PA_Education/TestMenifest/force-app/main/default/objects/HolidaySetting__c/HolidaySetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>휴일관리 기준 설정</description>
    <label>HolidaySetting</label>
</CustomObject>