PA_Education/TestMenifest/force-app/main/default/objects/HolidaySetting__c/fields/JoinDateRule__c.field-meta.xml
<CustomField>
    <fullName>JoinDateRule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True일경우 입사일 기준으로 연차 생성 및 사용연차를 갱신한다.
False일경우 특정일 기준으로 연차 생성 및 사용연차를 갱신한다.</description>
    <label>입사일 기준여부</label>
    <type>Checkbox</type>
</CustomField>